# haskell-stuff

./: AStar.hs  Graph.hs  Primes.hs  Y.hs  haskell-stuff.cabal  stack.yaml
FFI example/MyExe/: MyExe.cpp  MyExe.sln  MyExe.vcxproj  MyExe.vcxproj.filters
FFI example/MyLib/: Build.md  Fibonacci.hs  MyLib.def  MyLib.h
MyExe/: CMakeLists.txt  MyExe.c
MyLib/: Fibonacci.hs  MyLib.def
