cabal-version:      2.4
name:               haskell-stuff
version:            0.1.0.0

license:            MIT
author:             Oscar McNoe
maintainer:         oscar.mcnoe@gmail.com

executable astar
    main-is:          AStar.hs
    build-depends:
        base       ^>=4.18.1.0,
        array      ^>=0.5.5.0,
        containers ^>=0.6.8,
        PSQueue    ^>=1.2.0,
        astar      ^>=0.3.0.0
    default-language: GHC2021
    ghc-options:      -Wall

executable graph
    main-is:          Graph.hs
    build-depends:
        base       ^>=4.18.1.0,
        containers ^>=0.6.8
    default-language: GHC2021
    ghc-options:      -Wall

executable primes
    main-is:          Primes.hs
    build-depends:
        base       ^>=4.18.1.0,
        containers ^>=0.6.8
    default-language: GHC2021
    ghc-options:      -Wall

executable y
    main-is:          Y.hs
    build-depends:    base ^>=4.18.1.0
    default-language: GHC2021
    -- -O0 as Y combinator breaks optimizer :) "Simplifier ticks exhausted"
    ghc-options:      -Wall -O0
